--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
               <input type="text" name="track_title" placeholder="Track Title *" required />
               <input type="text" name="artist" placeholder="Artist *" required />
               <input type="text" name="streaming_link" placeholder="Streaming Link" />
-              <div v-for="(styleNames, category) in styles">
-                <legend >{{ category }}:</legend>
-                  <div v-for="styleName in styleNames" style="display: inline-block; margin-right: 1rem;">
-                    <input type="checkbox" id="{{ styleName }}" name="{{ styleName }}" />
-                    <label htmlFor="{{ styleName }}">{{ styleName }}</label>
-                  </div>
+              <div v-for="(styleName, styleKey, styleIndex) in styles" style="display: inline-block; margin-right: 1rem; margin-bottom: 1rem;">
+                <input type="checkbox" id="{{ styleKey }}" name="{{ styleKey }}" />
+                <label htmlFor="{{ styleKey }}">{{ styleName }}</label>
               </div>
-
               <button type="submit" class="submit-track-button">Submit</button>
 
             </fieldset>
@@ -59,6 +55,7 @@
               const response = await axios.get('/styles/');
               console.log(response.data);
               this.styles = response.data;
+              this.styles.sort();
             } catch (error) {
               console.error('Error fetching styles:', error);
             }
