pydantic started, not working

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   </li>
                   <li>
                     <label>
-                      <input type="checkbox" v-model="bachataCheckbox" name="liquid" />
+                      <input type="checkbox" v-model="bachataCheckbox" name="bachata" />
                       Bachata
                     </label>
                   </li>
